# SMathpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: api_reference.py  columna_interaccion.py  generate_beam.py  generate_gcd.py  generate_simpson.py  prueba_sm.py  viga_ha.py  viga_ha_aci318.py
output/: Columna_Interaccion.sm  EuclideanGCD_generated.sm  Viga_HA_ACI318.sm  api_reference.sm  beam_generated.sm  prueba.sm  simpson_generated.sm  viga_ha.sm
plans/smath-python-api/: plan.md  research.md
smathpy/: __init__.py  constants.py  document.py  settings.py
smathpy/expression/: __init__.py  builder.py  control.py  elements.py  functions.py  matrix.py
smathpy/regions/: __init__.py  area_region.py  base.py  math_region.py  picture_region.py  plot_region.py  text_region.py
smathpy/units/: __init__.py
tests/: conftest.py  test_control.py  test_document.py  test_expression.py  test_golden.py  test_matrix.py
